# inventorize

./: Cargo.toml  LICENSE  README.md
src/: hash.rs  inventory.rs  iterdir.rs  main.rs  util.rs
